fix: left panel scrollbar

--- a/src/dotnet/Chat.UI.Blazor/Components/components.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/components.css
@@ -119,7 +119,8 @@
 }
 
 .left-panel-tabs {
-    @apply relative top-0 pb-0 mb-0 border-b border-bg-04;
+    @apply p-0 m-0;
+    @apply border-b border-bg-04;
 }
 .left-panel-tabs .btn-group {
     @apply min-h-14 justify-start px-4;
